kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: skuggsnack
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: auth-service
