kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: skuggsnack
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31080  # specify a port between 30000-32767 
  selector:
    app: frontend
